add pager to bookmarks
git-svn-id: https://10.8.37.111/svn/jahia/trunk/modules@37095 69c369ed-ed09-0410-a4a1-e19a46c23626

--- a/src/main/webapp/resources/JahiaBookmarks.properties
+++ b/src/main/webapp/resources/JahiaBookmarks.properties
@@ -6,5 +6,6 @@ jnt_bookmarks = Bookmarks
 jnt_bookmarkButton = Bookmark button
 
 bookmark.add = Add bookmark
+bookmark.emptyResults = No bookmark added yet
 
 jnt_currentUserBookmarks=My bookmarks
