--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
                             <package-name>${project.name}</package-name>
                             <depends>Default Jahia Templates,Jahia User Profile</depends>
                             <root-folder>${project.artifactId}</root-folder>
+                            <module-type>profileModule</module-type>
                         </manifestEntries>
                     </archive>
                     <archiveClasses>true</archiveClasses>
