--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
                             <Specification-Version>${project.version}</Specification-Version>
                             <Specification-Vendor>${jahia.manifest.vendor.name}</Specification-Vendor>
                             <package-name>${project.name}</package-name>
-                            <depends>Default Jahia Templates,Jahia User Profile</depends>
+                            <depends>default,profile,skins,default-skins</depends>
                             <root-folder>${project.artifactId}</root-folder>
                             <module-type>profileModule</module-type>
                         </manifestEntries>
