--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,24 @@
         <version>6.7.0.0-SNAPSHOT</version>
     </parent>
     <version>2.0.0-SNAPSHOT</version>
-    <groupId>org.jahia.modules</groupId>
     <artifactId>bookmarks</artifactId>
     <name>Jahia My Bookmarks</name>
-    <description>This is a custom module for running on a Jahia server.</description>
+    <packaging>bundle</packaging>
+    <description>These are the custom module (Jahia My Bookmarks) for running on a Jahia server.</description>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Jahia-Depends>default,profile,skins,default-skins</Jahia-Depends>
+                        <Jahia-Module-Type>profileModule</Jahia-Module-Type>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
