--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
     <name>Jahia My Bookmarks</name>
     <packaging>bundle</packaging>
     <description>These are the custom module (Jahia My Bookmarks) for running on a Jahia server.</description>
+    <scm>
+        <connection>scm:git:git@github.com:Jahia/bookmarks.git</connection>
+        <url>scm:git:git@github.com:Jahia/bookmarks.git</url>
+        <developerConnection>scm:git:git@github.com:Jahia/bookmarks.git</developerConnection>
+    </scm>
     <repositories>
         <repository>
             <id>jahia-public</id>
