--- a/src/main/resources/resources/JahiaMyBookmarks.properties
+++ b/src/main/resources/resources/JahiaMyBookmarks.properties
@@ -6,6 +6,7 @@ jnt_bookmarks = Bookmarks
 jnt_bookmarkButton = Bookmark button
 
 bookmark.add = Add bookmark
+bookmark.added = Bookmark added
 bookmark.emptyResults = No bookmark added yet
 
 jnt_currentUserBookmarks=My bookmarks
