--- a/src/main/resources/resources/JahiaMyBookmarks.properties
+++ b/src/main/resources/resources/JahiaMyBookmarks.properties
@@ -10,3 +10,6 @@ bookmark.emptyResults = No bookmark added yet
 
 jnt_currentUserBookmarks=My bookmarks
 jnt_currentUserBookmarks.numberOfBookmarksPerPage=Number of bookmarks display per page
+
+bookmark.added =Bookmark successfully saved
+bookmark.alreadyExist =Bookmark already exist
