--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,10 @@
   <parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>jahia-modules</artifactId>
-    <version>7.2.0.0</version>
+    <version>7.5.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>bookmarks</artifactId>
-  <version>2.1.2-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>Jahia My Bookmarks</name>
   <description>These are the custom module (Jahia My Bookmarks) for running on a Jahia server.</description>
@@ -85,6 +85,8 @@
         <configuration>
           <instructions>
             <Jahia-Depends>default,profile,skins,default-skins</Jahia-Depends>
+            <Jahia-Signature>MCwCFGD6Tqsej8U9QYIL+/la6uVI/zcIAhRKtdKkHX/olaPS1np9Pl5a43e0Ig==</Jahia-Signature>
+            <require-capability>osgi.extender;filter:="(osgi.extender=org.jahia.bundles.blueprint.extender.config)"</require-capability>
           </instructions>
         </configuration>
       </plugin>
