--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
     <url>scm:git:git@github.com:Jahia/bookmarks.git</url>
     <tag>HEAD</tag>
   </scm>
+
+  <properties>
+    <jahia-module-signature>MCwCFGD6Tqsej8U9QYIL+/la6uVI/zcIAhRKtdKkHX/olaPS1np9Pl5a43e0Ig==</jahia-module-signature>
+    <require-capability>osgi.extender;filter:="(osgi.extender=org.jahia.bundles.blueprint.extender.config)"</require-capability>
+  </properties>
+
   <repositories>
     <repository>
       <releases>
@@ -85,8 +91,6 @@
         <configuration>
           <instructions>
             <Jahia-Depends>default,profile,skins,default-skins</Jahia-Depends>
-            <Jahia-Signature>MCwCFGD6Tqsej8U9QYIL+/la6uVI/zcIAhRKtdKkHX/olaPS1np9Pl5a43e0Ig==</Jahia-Signature>
-            <require-capability>osgi.extender;filter:="(osgi.extender=org.jahia.bundles.blueprint.extender.config)"</require-capability>
           </instructions>
         </configuration>
       </plugin>
